--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .logo {
-  width: 200px;
+  width: 150px;
   height: auto;
   border-radius: 50%;
   margin-top: 3rem;
@@ -40,13 +40,80 @@ body {
   cursor: pointer;
   margin-top: 3rem;
   margin-right: 10rem;
+  box-shadow: 0 0 40px 30px #ffffff;
+}
+
+.no-shadow .hamburger-menu {
+  box-shadow: none;
 }
 
 .line {
   width: 100%;
-  height: 5px;
-  background-color: white;
+  height: 7px;
+  background-color: orangered;
+  box-shadow: 0 0 10px 5px #ffffff;
 }
+
+.no-shadow .line {
+  box-shadow: none;
+}
+
+.hamburger-menu.active .line:nth-child(1) {
+  transform: translateY(12px) rotate(45deg);
+}
+
+.hamburger-menu.active .line:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-menu.active .line:nth-child(3) {
+  transform: translateY(-12px) rotate(-45deg);
+}
+
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.95);
+  display: none;
+  z-index: 1;
+}
+
+.menu-overlay.active {
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-items {
+  list-style: none;
+  padding: 0;
+  margin: 50px 0;
+}
+
+.menu-items li {
+  margin-bottom: 20px;
+}
+
+.menu-items li a {
+  color: rgb(1, 99, 1);
+  text-decoration: none;
+  font-size: 4rem;
+}
+
+.menu-items li a:hover {
+  text-decoration: underline;
+}
+
+.logo,
+.hamburger-menu {
+  position: relative;
+  z-index: 3;
+}
+
 .hero {
   position: relative;
   overflow: hidden;
@@ -67,8 +134,8 @@ body {
 
 #animated-text {
   opacity: 0;
-  transform: translateY(80px);
-  transition: opacity 1s, transform 3s;
+  transform: translateY(200px);
+  transition: opacity 1s, transform 5s;
 }
 
 .hero-content h1,
@@ -99,9 +166,9 @@ p {
 
 @keyframes shrinkBackground {
   0% {
-    transform: scale(1.3); /* Start with a slightly larger size */
+    transform: scale(1.3);
   }
   100% {
-    transform: scale(1); /* End with original size */
+    transform: scale(1);
   }
 }
