--- a/style.css
+++ b/style.css
@@ -25,22 +25,20 @@ body {
 }
 
 .logo {
-  width: 150px;
+  width: 15rem;
   height: auto;
   border-radius: 50%;
-  margin-top: 3rem;
-  margin-left: 10rem;
+  margin: 5rem;
 }
 .hamburger-menu {
-  width: 40px;
-  height: 30px;
+  width: 4rem;
+  height: 3.2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
-  margin-top: 3rem;
-  margin-right: 10rem;
-  box-shadow: 0 0 40px 30px #ffffff;
+  margin: 5rem;
+  box-shadow: 0 0 60px 50px #ffffff;
 }
 
 .no-shadow .hamburger-menu {
@@ -49,9 +47,10 @@ body {
 
 .line {
   width: 100%;
-  height: 7px;
+  height: 0.8rem;
   background-color: orangered;
   box-shadow: 0 0 10px 5px #ffffff;
+  transition: transform 0.3s, opacity 0.3s;
 }
 
 .no-shadow .line {
@@ -59,7 +58,7 @@ body {
 }
 
 .hamburger-menu.active .line:nth-child(1) {
-  transform: translateY(12px) rotate(45deg);
+  transform: translateY(1.2rem) rotate(45deg);
 }
 
 .hamburger-menu.active .line:nth-child(2) {
@@ -67,7 +66,7 @@ body {
 }
 
 .hamburger-menu.active .line:nth-child(3) {
-  transform: translateY(-12px) rotate(-45deg);
+  transform: translateY(-1.2rem) rotate(-45deg);
 }
 
 .menu-overlay {
@@ -91,11 +90,11 @@ body {
 .menu-items {
   list-style: none;
   padding: 0;
-  margin: 50px 0;
+  margin: 5rem 0;
 }
 
 .menu-items li {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .menu-items li a {
