--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ body {
   box-shadow: 0 0 60px 50px #ffffff;
 }
 
+.hamburger-menu:hover {
+  transform: scale(1.1);
+}
+
 .no-shadow .hamburger-menu {
   box-shadow: none;
 }
@@ -75,7 +79,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.95);
+  background-color: rgba(0, 12, 3, 0.95);
   display: none;
   z-index: 1;
 }
@@ -133,8 +137,8 @@ body {
 
 #animated-text {
   opacity: 0;
-  transform: translateY(200px);
-  transition: opacity 1s, transform 5s;
+  transform: translateY(20rem);
+  transition: opacity 1s, transform 3s;
 }
 
 .hero-content h1,
@@ -148,6 +152,12 @@ p {
   border-radius: 1rem;
   padding: 1.5rem;
   font-size: 2rem;
+}
+
+.cta-button:hover {
+  background-color: rgba(1, 55, 15, 0.95);
+  transform: scale(1.1);
+  transition: 0.3s;
 }
 
 .hero::before {
