--- a/style.css
+++ b/style.css
@@ -76,11 +76,11 @@ body {
 }
 
 .menu-overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 95vh;
   background-color: rgba(0, 12, 3, 0.95);
   display: none;
   z-index: 1;
@@ -198,9 +198,7 @@ aside {
   padding: 3rem;
 }
 section {
-  flex-shrink: 1;
-  flex-grow: 1;
-  flex-basis: 90ch;
+  flex: 1 1 90ch;
 }
 .title {
   font-size: 3.5rem;
