--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ section p {
   padding: 1rem;
   border-color: transparent;
   border-radius: 0.5rem;
+  margin-top: 3rem;
 }
 
 @media screen and (max-width: 900px) {
